tests/fixtures/semantics/invalid/switch_duplicate_literals.ora
fn f(x: u256) -> u256 {
    return switch (x) {
        1 => 10,
        1 => 11, // duplicate literal
        else => 0,
    };
}


